fix hero image overflow

--- a/src/pages/Login.module.css
+++ b/src/pages/Login.module.css
@@ -1,22 +1,28 @@
 .main {
-  display: flex;
-  /* flex-wrap: wrap; */
+  font-family: "Roboto", sans-serif;
   width: 100%;
   height: 100%;
-  gap: 2rem;
-  font-family: "Roboto", sans-serif;
-  /* align-items: center; */
+  padding-top: 2rem;
 }
 
 .hero-img {
   flex: 1;
-  max-height: 100%;
 }
 
-/* .hero-img img {
-  max-width: 100%;
-} */
+img {
+  width: 100%;
+  height: 100%;
+}
 
 .login-section {
   flex: 1;
+}
+
+@media (min-width: 520px) {
+  .main {
+    display: flex;
+    gap: calc(1rem + 6vw);
+    max-width: 1200px;
+    margin: 0 auto;
+  }
 }
