--- a/src/styles.css
+++ b/src/styles.css
@@ -7,21 +7,15 @@
 }
 .App {
   font-family: sans-serif;
-  text-align: center;
+  height: 100%;
 }
 
 body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   width: 100%;
-  /* min-height: 100%; */
-  max-height: 100%;
+  height: 100%;
   overflow-x: hidden;
   padding: 2rem 4rem;
   background: linear-gradient(to right, white, #effafd);
-}
-
-img {
-  max-width: 100%;
-  max-height: 100%;
 }
